Server services structure changes
