# python-flask-server/swagger_server/controllers/default_controller.py
@@ -141,7 +141,7 @@ def create_process_dataclass_matrix(project_id, process_dataclass_matrix, accoun
     return 'do some magic!'
 
 
-def create_projects(name, project_owner_id, secretary_id, account_id_session, token):
+def create_project(name, project_owner_id, secretary_id, account_id_session, token):
     """
     Create new project
     
